backend: new, introduce API to set name (#27)
