# src/backend/door_lock_cloud_api/src/swagger.yaml
@@ -66,6 +66,40 @@ paths:
                     type: string
                   lockState:
                     type: string
+    put:
+      operationId: "api.doorlocks.put_device_from_site"
+      tags:
+        - "Door Locks Site"
+      summary: "Update or create a door lock."
+      description: "Update or create the name of the door lock."
+      parameters:
+        - name: site_id
+          in: path
+          description: site Id
+          required: true
+          schema:
+            type: string
+        - name: device_id
+          in: path
+          description: device Id
+          required: true
+          schema:
+            type: string
+
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+
+      responses:
+        "200":
+          description: "Successful put doorlocks operation"
+
 
   /doorlocks/{site_id}/{device_id}/action:
     post:
